<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">
    <!-- 상단 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_close"
            android:contentDescription="@string/close_icon_content_description"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/page_title"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:gravity="center"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_ok"
            android:contentDescription="@string/finish_icon_content_description"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="#D3D0D0"/>
    <!-- 중간 -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:maxLines="1"
        android:inputType="text"
        android:background="@null"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="#D3D0D0"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subtitle_hint"
        android:maxLines="1"
        android:inputType="text"
        android:background="@null"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="#D3D0D0"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/content_hint"
        android:layout_weight="1"
        android:inputType="textMultiLine"
        android:background="@null"
        android:gravity="top"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="#D3D0D0"/>
    <!-- 하단 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/photo_icon_content_description"
            android:src="@drawable/icon_photo"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/text_color_icon_content_description"
            android:src="@drawable/icon_color"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/text_align_icon_content_description"
            android:src="@drawable/icon_align"/>
    </LinearLayout>

</LinearLayout>